issue #95 corrected shutdown scripts